<resources>
    <string name="app_name">Knowsie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="share">Share</string>
    <string name="new_knowsie">Add new Knowsie</string>
    <string name="new_group">Add new Group</string>
    <string name="groups">Groups</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="twitter_signin">Sign in with Twitter</string>
    <string name="instagram_signin">Sign in with Instagram</string>
    <string name="group_name">Name</string>
    <string name="twitter_user">Twitter username</string>
    <string name="instagram_user">Instagram username</string>
    <string name="empty_list">No items to display.</string>
</resources>
