<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/knowsie_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="32dp">

    <EditText
        android:id="@+id/group_name"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:hint="@string/group_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/twitter_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/group_name"
        android:scaleType="center"
        android:src="@drawable/ic_twitter_blue"/>

    <EditText
        android:id="@+id/twitter_user"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/group_name"
        android:layout_toRightOf="@id/twitter_icon"
        android:hint="@string/twitter_user"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/instagram_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/twitter_user"
        android:scaleType="center"
        android:src="@drawable/ic_instagram"/>

    <EditText
        android:id="@+id/instagram_user"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/twitter_user"
        android:layout_toRightOf="@id/instagram_icon"
        android:hint="@string/instagram_user"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/mainBlue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/ok_button"
        android:background="@color/mainBlue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

</RelativeLayout>